# palworld-ue4ss-mod

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Deploy.cmake  PalworldTooling.cmake  RunClangFormat.cmake  RunClangTidy.cmake
docs/superpowers/plans/: 2026-07-23-chinese-doxygen-comments.md  2026-07-23-clang-tooling.md  2026-07-23-item-localization.md  2026-07-23-pal-skill-editor.md  2026-07-23-palworld-editor-project-structure.md  2026-07-24-explicit-selected-pal-world-context-fix.md  2026-07-24-selected-otomo-skill-target.md
docs/superpowers/specs/: 2026-07-23-chinese-doxygen-comments-design.md  2026-07-23-clang-tooling-design.md  2026-07-23-item-localization-design.md  2026-07-23-pal-skill-editor-design.md  2026-07-23-palworld-editor-project-structure-design.md  2026-07-24-selected-otomo-skill-target-design.md  2026-07-24-selected-otomo-world-context-fix-design.md
mods/: CMakeLists.txt
mods/MyPalMod/: CMakeLists.txt
mods/MyPalMod/src/: dllmain.cpp  item_database.h  pal_game.hpp  pal_skills.cpp  pal_skills.hpp  skill_catalog.hpp  skill_editor_service.hpp  text_encoding.hpp
mods/MyPalMod/tests/: skill_editor_tests.cpp
mods/PalworldEditor/: CMakeLists.txt
mods/PalworldEditor/inc/game/: pal_game.hpp
mods/PalworldEditor/inc/items/: item_catalog.hpp
mods/PalworldEditor/inc/skills/: pal_skills.hpp  selected_target_state.hpp  skill_catalog.hpp  skill_editor_service.hpp
mods/PalworldEditor/inc/support/: text_encoding.hpp
mods/PalworldEditor/src/: dllmain.cpp  pal_skills.cpp
mods/PalworldEditor/tests/: skill_editor_tests.cpp
scripts/: build.ps1  deploy.ps1  setup.ps1
